...
            }
        }
    }
    
    //ALERT PRZY PRÓBIE USUNIĘCIA ELEMENTU
    func deleteAlert() -> Alert {
        return Alert(title: Text("Are You sure ?"), primaryButton: .destructive(Text("Delete")) {
            listViewModel.deleteItem(indexSet: self.indexSetToDelete!)
            listViewModel.showDeleteToast.toggle()
        },
            secondaryButton: .cancel())
    }
}
...
