...
                    .fontWeight(.bold)
                
                Text("Click on the button below and add Your 1st ToDo !")
                    .padding(.bottom, 20)
                
                NavigationLink(destination: AddView(), label: {
                    Text("Add 1st ToDo!")
                        .foregroundColor(.white)
                        .font(.headline)
                        .frame(height: 55)
                        .frame(maxWidth: .infinity)
                        .background(addAnimation ? Color(red: 0, green: 0.1373, blue: 0.6118) : Color(red: 0.8824, green: 0.0235, blue: 0))
                        .cornerRadius(10)
...
